--- a/srtech/package.json
+++ b/srtech/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --configuration production --base-href /srtech/",
+    "build:prod": "ng build --prod --base-href=/srtech/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:srtech": "node dist/srtech/server/server.mjs"
