--- a/SRTechnologies/angular.json
+++ b/SRTechnologies/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "srtech": {
+    "SRTechnologies": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -67,10 +67,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "srtech:build:production"
+              "buildTarget": "SRTechnologies:build:production"
             },
             "development": {
-              "buildTarget": "srtech:build:development"
+              "buildTarget": "SRTechnologies:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -78,7 +78,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "srtech:build"
+            "buildTarget": "SRTechnologies:build"
           }
         },
         "test": {
