given pull to githubAction

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: srtech/dist/browser
+          folder: SRTechnologies/dist/browser
           branch: prod  
           token: ${{ secrets.GH_TOKEN }}
 
