--- a/SRTechnologies/package.json
+++ b/SRTechnologies/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --configuration=production --base-href https://surla-anil.github.io/SRTechnologies",
+    "build:prod": "ng build --configuration=production --base-href https://surla-anil.github.io/SRTechnologies/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:srtech": "node dist/SRTechnologies/server/server.mjs"
